--- a/css/estilo.css
+++ b/css/estilo.css
@@ -132,10 +132,8 @@ figure{
     margin:0 auto;
     text-align: center;
     padding: 0; 
-   display: grid;
-  
-  
-  padding: 10px;
+    display: grid;
+    padding: 10px;
 }
 
 .td{
@@ -174,15 +172,14 @@ footer {
     grid-column: 5;
     grid-template-columns: auto auto auto auto auto auto;
 }
+.fincompra{
+    text-align: center;
 }
-.viajeprueba{
-  margin:0 auto;
-  text-align: center;
-  padding: 0; 
- display: grid;
-
-
-padding: 10px;
+footer{
+    display: flex;
+    flex: auto;
+    text-decoration: none;
 }
+
  
 
