--- a/css/estilo.css
+++ b/css/estilo.css
@@ -160,17 +160,35 @@ footer {
     padding: 20px;
     margin-top: auto;
     position: absolute;
-    
+    color: wheat;
   }
 .contenedor{
     display: flex;
     flex-direction: column;
     align-items: center;
+    list-style-type: none;
 }
 .item{
     display: grid;
     grid-column: 5;
     grid-template-columns: auto auto auto auto auto auto;
+    padding: 0.2em;
+
+}
+.item:hover{
+  transition: all 0.2s ease-in-out; 
+  background-color: #f4511e;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
+  border-radius: 20px;
+  border-color: black;
+  
 }
 .fincompra{
     text-align: center;
