--- a/css/boton.css
+++ b/css/boton.css
@@ -15,6 +15,15 @@
     transform: scale(0,5.0,25);
     cursor: pointer;
   }
-  
+  .boton-estilo-carrito{
+    padding: 0.2em;
+    align-items: center;
+    text-align: center;
+    border-radius: 5px;
+    background-color: rgb(247, 190, 4); 
+    box-shadow: 0px 0px 0.75px 0.4px rgba(0,0,0,0.75);
+    transform: scale(0,5.0,25);
+    cursor: pointer;
+  }
 
 
