--- a/css/estilo.css
+++ b/css/estilo.css
@@ -198,6 +198,23 @@ footer{
     flex: auto;
     text-decoration: none;
 }
+.itemboton{
+    align-items: center;
+}
+.itemboton:hover{
+    transition: all 0.2s ease-in-out; 
+  background-color: #f4511e;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
+  border-radius: 20px;
+  border-color: black;
+}
 
  
 
