--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,8 +3,9 @@ body{
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     width:100%;
+    max-width: 100%;
+    overflow-x: hidden;
 }
-
 
 .separador{
     border-style: none;
@@ -26,7 +27,7 @@ h1{
 }
 .menu-inicio {
     flex: auto;    
-    font-size: 40px; 
+    font-size: 20px; 
     padding-bottom: 2em;
     border-bottom: 2px solid hsl(0, 0%, 0%);
     background-color: #f0b651;
@@ -35,8 +36,7 @@ h1{
    padding-top: 0; 
 }
 .menu-inicio a{
-    
-  font-size: 40px;
+  font-size: 30px;
   text-decoration: none;
   background: $white;
   padding: 0.2em;
@@ -197,6 +197,7 @@ footer{
     display: flex;
     flex: auto;
     text-decoration: none;
+    list-style: none;
 }
 .itemboton{
     align-items: center;
@@ -214,6 +215,49 @@ footer{
   transition: 0.3s;
   border-radius: 20px;
   border-color: black;
+}
+
+.quienes-somos{
+    flex: auto;  
+    text-decoration: none;
+    font-size: 30px; 
+    list-style: none;
+    padding: 0.3em;
+    text-align: center;
+    list-style-type: none;
+}
+.quienes-somos:h2{
+    text-align: left;
+}
+.presentacion{
+    flex: auto;  
+    text-decoration: none;
+    font-size: 30px; 
+    list-style: none;
+    padding: 0.3em;
+    text-align: center;
+    list-style-type: none;
+}
+iframe{
+    align-items: center;
+    width:100%;
+}
+.formulario{
+   text-align: center;
+    font-size: 30px;
+  text-decoration: none;
+  background: $white;
+}
+.contactoh2{
+    text-align: center;
+}
+.contactoh3{
+    text-align: center;
+}
+input{
+   border-radius: 5px; 
+   size-adjust: 30px;
+   height: 30px;
 }
 
  
