--- a/css/estilo.css
+++ b/css/estilo.css
@@ -102,9 +102,7 @@ figure{
     text-align: left;
     align-items: center;
 }
-.recomendacion:hover{
-    background-color: rgb(255, 255, 0);
-}
+
 
 .dataempresa{
     transition: all 5s ease-in-out;
@@ -259,6 +257,19 @@ input{
    size-adjust: 30px;
    height: 30px;
 }
-
+.foto:hover{
+    transition: all 0.2s ease-in-out; 
+  
+  border: none;
+ 
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  
+  transition: 0.3s;
+  border-radius: 20px;
+  border-color: black;
+}
  
 
