--- a/css/estilo.css
+++ b/css/estilo.css
@@ -82,7 +82,7 @@ img{
     border-radius: 10px;
 }
 figure{
-    padding: 0%;
+    padding: 0.5em;
     margin: 0%;
     align-items: center;
 }
@@ -96,7 +96,12 @@ figure{
 }
 .recomendacion{
     border: 5px;
-    border-style:double;
+    padding: 20px;
+    
+  box-shadow: inset 0 -3em 3em rgba(233, 187, 7, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+    box-shadow: 10px 5px 5px rgb(255, 166, 0);
+    border-style:inset;
     border-radius: 15px;
     width: 400px;
     text-align: left;
